[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-engram"
version = "0.1.0"
description = "LangChain integration for Engram — cognitive memory infrastructure for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Engram Team" }]
keywords = ["langchain", "engram", "ai", "memory", "agents", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "engram.to>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "httpx>=0.24",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
]

[project.urls]
Homepage = "https://engram.ai"
Repository = "https://github.com/engram-ai/langchain-engram"
Documentation = "https://docs.engram.ai/integrations/langchain"

[tool.hatch.build.targets.wheel]
packages = ["langchain_engram"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
